force-app/main/default/objects/Tenant__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>