force-app/main/default/objects/Tenant__c/fields/TenantKey__c.field-meta.xml
<CustomField>
    <fullName>TenantKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Tenant Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>